src/test/resources/purescript_examples/passing/HasOwnProperty.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSProperNameImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('log')
                  PsiElement(whitespace)(' ')
            PSParensImpl(Parens)
              PsiElement(()('(')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSObjectLiteralImpl(ObjectLiteral)
                    PsiElement({)('{')
                    PSObjectBinderFieldImpl(ObjectBinderField)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('hasOwnProperty')
                      PsiElement(operator)(':')
                      PsiElement(whitespace)(' ')
                      PSValueImpl(Value)
                        PSPrefixValueImpl(PrefixValue)
                          PSStringLiteralImpl(StringLiteral)
                            PsiElement(string)('"Hi"')
                    PsiElement(})('}')
                    PsiElement(whitespace)(' ')
                  PsiElement({)('{')
                  PSIdentifierImpl(identifier)
                    PsiElement(identifier)('hasOwnProperty')
                  PsiElement(whitespace)(' ')
                  PsiElement(=)('=')
                  PsiElement(whitespace)(' ')
                  PSValueImpl(Value)
                    PSPrefixValueImpl(PrefixValue)
                      PSStringLiteralImpl(StringLiteral)
                        PsiElement(string)('"Done"')
                  PsiElement(})('}')
              PsiElement())(')')
            PSAccessorImpl(Accessor)
              PsiElement(.)('.')
              PSIdentifierImpl(identifier)
                PsiElement(identifier)('hasOwnProperty')
              PsiElement(whitespace)('\n')
