src/test/resources/purescript_examples/failing/DoNotSuggestComposition2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TypesDoNotUnify\n-- TODO: Check that this does not produce a "function composition is (<<<)"\n-- suggestion.\n\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('DoNotSuggestComposition2')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSLetImpl(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PSValueDeclarationImpl(ValueDeclaration)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('x')
                  PsiElement(whitespace)(' ')
                PSNamedBinderImpl(NamedBinder)
                  <empty list>
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PSValueImpl(Value)
                  PSPrefixValueImpl(PrefixValue)
                    PSObjectLiteralImpl(ObjectLiteral)
                      PsiElement({)('{')
                      PsiElement(whitespace)(' ')
                      PSObjectBinderFieldImpl(ObjectBinderField)
                        PSIdentifierImpl(identifier)
                          PsiElement(identifier)('y')
                        PsiElement(operator)(':')
                        PsiElement(whitespace)(' ')
                        PSValueImpl(Value)
                          PSPrefixValueImpl(PrefixValue)
                            PSNumericLiteralImpl(NumericLiteral)
                              PsiElement(natural)('3')
                              PsiElement(whitespace)(' ')
                      PsiElement(})('}')
                      PsiElement(whitespace)(' ')
              PsiElement(in)('in')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSProperNameImpl(Qualified)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('x')
                        PsiElement(whitespace)(' ')
                  PSNumericLiteralImpl(NumericLiteral)
                    PsiElement(natural)('2')
                    PsiElement(whitespace)('\n')
